# graph-test-proj

./: README.md  makefile  pyproject.toml  requirements.txt
src/: client.py  logger.py  server.py
src/client/: custom_types.py  handlers.py  main.py  utils.py
src/server/: errors.py  handlers.py  main.py
tests/: conftest.py
tests/client/: test_handlers.py  test_utils.py
tests/server/: test_compute_cmd_handler.py  test_os_cmd_handler.py  test_process_message.py
